// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with black text on light backgrounds 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 4px 8px;
  margin-top: 4px;
  margin-right: 4px;
  font-size: 12px;
  font-weight: 600;
  line-height: 1;
  color: #000000;
  background-color: #eee;
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 rgba(0,35,70,0.09);
}

<span
  class="emotion-0 emotion-1"
/>
`;

exports[`renders with white text on dark backgrounds 1`] = `
.emotion-0 {
  display: inline-block;
  padding: 4px 8px;
  margin-top: 4px;
  margin-right: 4px;
  font-size: 12px;
  font-weight: 600;
  line-height: 1;
  color: #ffffff;
  background-color: #333;
  border-radius: 3px;
  box-shadow: inset 0 -1px 0 rgba(0,35,70,0.09);
}

<span
  class="emotion-0 emotion-1"
/>
`;
